--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "type": "git",
     "url": "git+https://github.com/Cyclonecode/nuxt-cision-block.git"
   },
-
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
@@ -39,7 +38,9 @@
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
     "@types/node": "^17.0.8",
+    "jest": "^27.4.7",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.2",
     "typescript": "^4.5.4",
     "vue": "^2.6.14"
   }
