--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.4",
     "vue": "^2.6.14"
   }
