--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags",
     "postbuild": "cp -R src/*.vue src/pages lib/.",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.vue\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "eslint ./src --ext .ts"
   },
   "author": "Krister Andersson <cyclonecode@gmail.com>",
   "repository": {
@@ -37,16 +37,18 @@
     "md5": "^2.3.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/jest": "^27.4.0",
     "@types/lru-cache": "^5.1.1",
     "@types/md5": "^2.3.1",
     "@types/node": "^17.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.2",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.4",
     "vue": "^2.6.14"
   }
