--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags",
     "postbuild": "cp -R src/*.vue src/pages lib/.",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.vue\"",
-    "lint": "eslint ./src --ext .ts"
+    "lint": "eslint --ext .ts,.vue ./src"
   },
   "author": "Krister Andersson <cyclonecode@gmail.com>",
   "repository": {
@@ -46,6 +46,7 @@
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.3.0",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
