--- a/package.json
+++ b/package.json
@@ -52,5 +52,13 @@
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.4",
     "vue": "^2.6.14"
+  },
+  "bugs": {
+    "url": "https://github.com/Cyclonecode/nuxt-cision-block/issues"
+  },
+  "homepage": "https://github.com/Cyclonecode/nuxt-cision-block#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
   }
 }
