--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     ]
   },
   "include": ["src/**/*.ts",  "src/**/*.vue"],
-  "exclude": ["node_modules", "**/__tests__/*", "/lib"]
+  "exclude": ["node_modules", "**/__tests__/*", "/lib", "/docker"]
 }
