Add environment variables

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,59 @@ services:
       context: '.'
       dockerfile: './docker/Dockerfile'
       args:
-        - NUXT_PORT=8080
+        - PORT=$PORT
+        - FEED_ID=$FEED_ID
+        - BASE_PATH=$BASE_PATH
+        - USE_CACHE=$USE_CACHE
+        - CACHE_MAX=$CACHE_MAX
+        - CACHE_MAX_AGE=$CACHE_MAX_AGE
+        - SHOW_IMAGE=$SHOW_IMAGE
+        - SHOW_INTRO=$SHOW_INTRO
+        - SHOW_BODY=$SHOW_BODY
+        - SHOW_ARTICLE_IMAGE=$SHOW_ARTICLE_IMAGE
+        - SHOW_ARTICLE_INTRO=$SHOW_ARTICLE_INTRO
+        - SHOW_ARTICLE_BODY=$SHOW_ARTICLE_BODY
+        - SHOW_ARTICLE_FILES=$SHOW_ARTICLE_FILES
+        - DISPLAY_MODE=$DISPLAY_MODE
+        - ITEMS_PER_PAGE=$ITEMS_PER_PAGE
+        - ITEM_COUNT=$ITEM_COUNT
+        - ITEM_TYPE=$ITEM_TYPE
+        - MUST_HAVE_IMAGE=$MUST_HAVE_IMAGE
+        - START_DATE=$START_DATE
+        - END_DATE=$END_DATE
+        - LANGUAGE=$LANGUAGE
+        - CATEGORIES=$CATEGORIES
+        - KEYWORDS=$KEYWORDS
+        - MARK_ITEM=$MARK_ITEM
+        - REGULATORY_TEXT=$REGULATORY_TEXT
+        - NON_REGULATORY_TEXT=$NON_REGULATORY_TEXT
+    environment:
+      - PORT=$PORT
+      - FEED_ID=$FEED_ID
+      - BASE_PATH=$BASE_PATH
+      - USE_CACHE=$USE_CACHE
+      - CACHE_MAX=$CACHE_MAX
+      - CACHE_MAX_AGE=$CACHE_MAX_AGE
+      - SHOW_IMAGE=$SHOW_IMAGE
+      - SHOW_INTRO=$SHOW_INTRO
+      - SHOW_BODY=$SHOW_BODY
+      - SHOW_ARTICLE_IMAGE=$SHOW_ARTICLE_IMAGE
+      - SHOW_ARTICLE_INTRO=$SHOW_ARTICLE_INTRO
+      - SHOW_ARTICLE_BODY=$SHOW_ARTICLE_BODY
+      - SHOW_ARTICLE_FILES=$SHOW_ARTICLE_FILES
+      - DISPLAY_MODE=$DISPLAY_MODE
+      - ITEMS_PER_PAGE=$ITEMS_PER_PAGE
+      - ITEM_COUNT=$ITEM_COUNT
+      - ITEM_TYPE=$ITEM_TYPE
+      - MUST_HAVE_IMAGE=$MUST_HAVE_IMAGE
+      - START_DATE=$START_DATE
+      - END_DATE=$END_DATE
+      - LANGUAGE=$LANGUAGE
+      - CATEGORIES=$CATEGORIES
+      - KEYWORDS=$KEYWORDS
+      - MARK_ITEM=$MARK_ITEM
+      - REGULATORY_TEXT=$REGULATORY_TEXT
+      - NON_REGULATORY_TEXT=$NON_REGULATORY_TEXT
     restart: always
     ports:
-      - 8080:8080
+      - $PORT:$PORT
