--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,10 +8,55 @@ COPY ./lib ./node_modules/nuxt-cision-block/lib
 COPY ./package*.json ./node_modules/nuxt-cision-block/.
 RUN npm run build
 
-ARG NUXT_PORT
+ARG PORT
+ARG BASE_PATH
+ARG FEED_ID
+ARG USE_CAHCE
+ARG CACHE_MAX
+ARG CACHE_MAX_AGE
+ARG SHOW_IMAGE
+ARG SHOW_INTRO
+ARG SHOW_BODY
+ARG SHOW_ARTICLE_IMAGE
+ARG SHOW_ARTICLE_INTRO
+ARG SHOW_ARTICLE_BODY
+ARG SHOW_ARTICLE_FILES
+ARG DISPLAY_MODE
+ARG ITEMS_PER_PAGE
+ARG ITEM_COUNT
+ARG MUST_HAVE_IMAGE
+ARG START_DATE
+ARG END_DATE
+ARG LANGUAGE
+ARG CATEGORIES
+ARG KEYWORDS
+ARG MARK_ITEM
+ARG REGULATORY_TEXT
+ARG NON_REGULATORY_TEXT
 
 ENV NUXT_HOST=0.0.0.0
-ENV NUXT_PORT=$NUXT_PORT
+ENV NUXT_PORT=$PORT
+ENV BASE_PATH=$BASE_PATH
+ENV FEED_ID=$ID
+ENV SHOW_IMAGE=$SHOWIMAGE
+ENV SHOW_INTRO=$SHOW_INTRO
+ENV SHOW_BODY=$SHOW_BODY
+ENV SHOW_ARTICLE_IMAGE=$SHOW_ARTICLE_IMAGE
+ENV SHOW_ARTICLE_INTRO=$SHOW_ARTICLE_INTRO
+ENV SHOW_ARTICLE_BODY=$SHOW_ARTICLE_BODY
+ENV SHOW_ARTICLE_FILES=$SHOW_ARTICLE_FILES
+ENV DISPLAY_MODE=$DISPLAY_MODE
+ENV ITEMS_PER_PAGE=$ITEMS_PER_PAGE
+ENV ITEM_COUNT=$ITEM_COUNT
+ENV MUST_HAVE_IMAGE=$MUST_HAVE_IMAGE
+ENV START_DATE=$START_DATE
+ENV END_DATE=$END_DATE
+ENV LANGUAGE=$LANGUAGE
+ENV CATEGORIES=$CATEGORIES
+ENV KEYWORDS=$KEYWORDS
+ENV MARK_ITEM=$MARK_ITEM
+ENV REGULATORY_TEXT=$REGULATORY_TEXT
+ENV NON_REGULATORY_TEXT=$NON_REGULATORY_TEXT
 
 EXPOSE $NUXT_PORT
 
