--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-cision-block",
+  "name": "nuxt-cision",
   "version": "1.0.0",
   "description": "Cision Block module for nuxt",
   "engines": {
