--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "type": "git",
     "url": "git+https://github.com/Cyclonecode/nuxt-cision-block.git"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.24.0",
     "lru-cache": "^6.0.0",
