--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -34,29 +34,29 @@ ARG MARK_ITEM
 ARG REGULATORY_TEXT
 ARG NON_REGULATORY_TEXT
 
-ENV NUXT_HOST=0.0.0.0
-ENV NUXT_PORT=$PORT
-ENV BASE_PATH=$BASE_PATH
-ENV FEED_ID=$ID
-ENV SHOW_IMAGE=$SHOWIMAGE
-ENV SHOW_INTRO=$SHOW_INTRO
-ENV SHOW_BODY=$SHOW_BODY
-ENV SHOW_ARTICLE_IMAGE=$SHOW_ARTICLE_IMAGE
-ENV SHOW_ARTICLE_INTRO=$SHOW_ARTICLE_INTRO
-ENV SHOW_ARTICLE_BODY=$SHOW_ARTICLE_BODY
-ENV SHOW_ARTICLE_FILES=$SHOW_ARTICLE_FILES
-ENV DISPLAY_MODE=$DISPLAY_MODE
-ENV ITEMS_PER_PAGE=$ITEMS_PER_PAGE
-ENV ITEM_COUNT=$ITEM_COUNT
-ENV MUST_HAVE_IMAGE=$MUST_HAVE_IMAGE
-ENV START_DATE=$START_DATE
-ENV END_DATE=$END_DATE
-ENV LANGUAGE=$LANGUAGE
-ENV CATEGORIES=$CATEGORIES
-ENV KEYWORDS=$KEYWORDS
-ENV MARK_ITEM=$MARK_ITEM
-ENV REGULATORY_TEXT=$REGULATORY_TEXT
-ENV NON_REGULATORY_TEXT=$NON_REGULATORY_TEXT
+ENV NUXT_HOST=0.0.0.0 \
+    NUXT_PORT=$PORT \
+    BASE_PATH=$BASE_PATH \
+    FEED_ID=$ID \
+    SHOW_IMAGE=$SHOWIMAGE \
+    SHOW_INTRO=$SHOW_INTRO \
+    SHOW_BODY=$SHOW_BODY \
+    SHOW_ARTICLE_IMAGE=$SHOW_ARTICLE_IMAGE \
+    SHOW_ARTICLE_INTRO=$SHOW_ARTICLE_INTRO \
+    SHOW_ARTICLE_BODY=$SHOW_ARTICLE_BODY \
+    SHOW_ARTICLE_FILES=$SHOW_ARTICLE_FILES \
+    DISPLAY_MODE=$DISPLAY_MODE \
+    ITEMS_PER_PAGE=$ITEMS_PER_PAGE \
+    ITEM_COUNT=$ITEM_COUNT \
+    MUST_HAVE_IMAGE=$MUST_HAVE_IMAGE \
+    START_DATE=$START_DATE \
+    END_DATE=$END_DATE \
+    LANGUAGE=$LANGUAGE \
+    CATEGORIES=$CATEGORIES \
+    KEYWORDS=$KEYWORDS \
+    MARK_ITEM=$MARK_ITEM \
+    REGULATORY_TEXT=$REGULATORY_TEXT \
+    NON_REGULATORY_TEXT=$NON_REGULATORY_TEXT
 
 EXPOSE $NUXT_PORT
 
